[Bugfix] Fixed z-index on popup to appear above other elements

--- a/src/components/Options-popup/Options-popup.scss
+++ b/src/components/Options-popup/Options-popup.scss
@@ -8,7 +8,7 @@
   position: absolute;
   transition: opacity 0.1s ease-in-out;
   width: 100vw;
-  z-index: 0;
+  z-index: 2;
 
   &.open{
     opacity: 1;
@@ -19,7 +19,7 @@
     background-color: #fff;
     border-radius: 6px;
     padding: 30px;
-    z-index: 10;
+    z-index: 30;
 
     h3{
       text-align: center;
@@ -58,5 +58,6 @@
     height: 100%;
     position: absolute;
     width: 100%;
+    z-index: 0;
   }
 }
