--- a/src/components/Progress-summary/Progress-summary.scss
+++ b/src/components/Progress-summary/Progress-summary.scss
@@ -6,6 +6,7 @@
   padding: 15px;
   position: absolute;
   width: 100%;
+  z-index: 1;
 
   .progress-bar-wrapper{
     background-color: #fff;
